src/test/ui/auto-traits/typeck-default-trait-impl-precedence.stderr
error[E0277]: the trait bound `u32: Signed` is not satisfied
  --> $DIR/typeck-default-trait-impl-precedence.rs:19:5
   |
LL |     is_defaulted::<&'static u32>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Signed` is not implemented for `u32`
   |
note: required because of the requirements on the impl of `Defaulted` for `&'static u32`
  --> $DIR/typeck-default-trait-impl-precedence.rs:10:19
   |
LL | impl<'a,T:Signed> Defaulted for &'a T { }
   |                   ^^^^^^^^^     ^^^^^
note: required by a bound in `is_defaulted`
  --> $DIR/typeck-default-trait-impl-precedence.rs:12:19
   |
LL | fn is_defaulted<T:Defaulted>() { }
   |                   ^^^^^^^^^ required by this bound in `is_defaulted`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
